[project]
name = "pin-generator-1-relduz-chloe"
version = "0.1.2"
authors = [{ name = "Chloe", email = "ctao1206@gmail.com" }]
description = "4 digit pin generator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
